# liblogger

./: DOCS.md  LICENSE  README.md  meson.build
.cache/clangd/index/: log.c.FC25195632544F19.idx  logger.h.D4638D4C360C0497.idx
app/: .gitignore  Makefile  app  main.c
src/: log.c  meson.build
src/include/: logger.h
